--- a/site/s/cv.html
+++ b/site/s/cv.html
@@ -391,6 +391,21 @@ body{background:white}
 <span class="dotgray"></span></span></dd>
 </dl>
 </fieldset>
+<fieldset>
+<legend>Legend</legend>
+
+<dl>
+<dt class='full'><span class="ampel" title="great"><span class="dotgreen"></span>
+<span class="dotgray"></span>
+<span class="dotgray"></span></span></dt><dd class='full'>>=O(1000)h of experience</dd>
+<dt class='full'><span class="ampel" title="good"><span class="dotgray"></span>
+<span class="dotyellow"></span>
+<span class="dotgray"></span></span>}</dt><dd class='full'>O(100)h of experience</dd>
+<dt class='full'><span class="ampel" title="average"><span class="dotgray"></span>
+<span class="dotgray"></span>
+<span class="dotred"></span></span></dt><dd class='full'>basic knowledge</dd>
+</dl>
+</fieldset>
   </div>
   <div class="column" style="background-color:#fff;">
     <fieldset>
